--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "globalTeardown": "./testGlobalTeardown.js",
+    "globalSetup": "./testGlobalSetup.js"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
